--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,7 @@
 	<head>
 	<script  src ="{{asset('assets/tarteaucitron/tarteaucitron.js')}}"> </script>
 
-		<script> 
+		<script>
 		tarteaucitron . init ( { 
 			"privacyUrl" : "" ,  /* URL de la politique de confidentialité */ 
 			"bodyPosition" : "bottom" ,  /* ou top pour l'amener comme premier élément pour l'accessibilité */
@@ -53,14 +53,15 @@
 		tarteaucitron.user.gajsUa = 'UA-97102682-4';
         tarteaucitron.user.gajsMore = function () { /* add here your optionnal _ga.push() */ };
         (tarteaucitron.job = tarteaucitron.job || []).push('gajs');
-		</script>​​
+		</script>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Italianno&display=swap" rel="stylesheet">
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 		
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<title>
 			{% block title %}Les Brunchs de Bob et Tintin
 			{% endblock %}
