--- a/templates/mensions_legales/index.html.twig
+++ b/templates/mensions_legales/index.html.twig
@@ -1,49 +1,43 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello MensionsLegalesController!
-{% endblock %}
+{% block title %}Mentions Légales{% endblock %}
 
 {% block body %}
-	<div id='NosParte' class="text-center col-md-2 mx-auto p-3 rounded">
-		CGV | Mensions Legales
-	</div>
+    <main class="container-fluid">
+        <header class="text-center col-md-2 mx-auto p-3 rounded">
+            <h1>CGV | Mentions Légales</h1>
+        </header>
 
-	<div class="container-fluid">
-		<div id='parte' class="text-start col-md-10 mx-auto p-3 rounded">
-			<div class="row justify-content-center">
-				<div class="entry-content">
-					<h2>LES MENSIONS LEGALES</h2>
-					<p>En vigueur au 01/02/2022</p>
-					<p></p>
-					<p>Conformément aux dispositions des Articles 6-III et 19 de la Loi n°2004-575 du 21 juin 2004 pour la Confiance dans l’économie numérique, dite L.C.E.N., il est porté à la connaissance des utilisateurs et visiteurs, ci-après l»»<strong>Utilisateur</strong>«, du site https://www.Les-Brunchs-de-Bob-et-Tintin.fr/ , ci-après le «<strong>Site</strong>«, les présentes mentions légales.</p>
-					<p>La connexion et la navigation sur le Site par l’Utilisateur implique acceptation intégrale et sans réserve des présentes mentions légales.</p>
-					<p>La connexion et la navigation sur le Site par l’Utilisateur implique acceptation intégrale et sans réserve des présentes mentions légales.</p>
-					<p>Ces dernières sont accessibles sur le Site à la rubrique « Mentions légales ».</p>
-					<p></p>
-					<h2>ARTICLE 1 – L’ÉDITEUR</h2>
-					<p>L’édition et la direction de la publication du Site est assurée par Bob&Tintin | DWWM@2024, dont l’adresse e-mail est : bob-tintin@gmail.com</p>
-					<p>La personne est assujettie au Registre du Commerce et des Sociétés de Saint Omer sous le numéro XXXXXXXXX.</p>
-					<p>ci-après l'»<strong>Editeur</strong>«</p>
-					<p></p>
-					<h2>ARTICLE 2 – L’HÉBERGEUR</h2>
-					<p>L’hébergeur du Site est la société OVH, dont le siège social est situé au 2 rue Kellermann – 59100 Roubaix. Téléphone : 0522260086</p>
-					<p></p>
-					<h2>ARTICLE 3 – ACCÈS AU SITE</h2>
-					<p>Le Site est accessible en tout endroit, 7j/7, 24h/24 sauf cas de force majeure, interruption programmée ou non et pouvant découlant d’une nécessité de maintenance.</p>
-					<p>En cas de modification, interruption ou suspension du Site, l’Editeur ne saurait être tenu responsable.</p>
-					<p></p>
-					<h2>ARTICLE 4 – COLLECTE DES DONNÉES</h2>
-					<p>Le Site assure à l’Utilisateur une collecte et un traitement d’informations personnelles dans le respect de la vie privée conformément à la loi n°78-17 du 6 janvier 1978 relative à l’informatique, aux fichiers et aux libertés.</p>
-					<p>En vertu de la loi Informatique et Libertés, en date du 6 janvier 1978, l’Utilisateur dispose d’un droit d’accès, de rectification, de suppression et d’opposition de ses données personnelles. L’Utilisateur exerce ce droit :</p>
-					<ul>
-						<li>par mail à l’adresse email contact@Les-Brunchs-de-Bob-et-Tintin.fr</li>
-					</ul>
-					<p>Toute utilisation, reproduction, diffusion, commercialisation, modification de toute ou partie du Site, sans autorisation de l’Editeur est prohibée et pourra entraînée des actions et poursuites judiciaires telles que notamment prévues par le Code de la propriété intellectuelle et le Code civil.</p>
-					<p></p>
-					<p></p>
-				</div>
-			</div>
-		</div>
-	</div>
-
+        <section class="col-md-10 mx-auto p-3 rounded">
+            <div class="row justify-content-center">
+                <article class="entry-content">
+                    <h2>LES MENTIONS LEGALES</h2>
+                    <p>En vigueur au 01/02/2022</p>
+                    <p>Conformément aux dispositions des Articles 6-III et 19 de la Loi n°2004-575 du 21 juin 2004 pour la Confiance dans l’économie numérique, dite L.C.E.N., il est porté à la connaissance des utilisateurs et visiteurs, ci-après l’«<strong>Utilisateur</strong>», du site https://www.Les-Brunchs-de-Bob-et-Tintin.fr/ , ci-après le «<strong>Site</strong>», les présentes mentions légales.</p>
+                    <p>La connexion et la navigation sur le Site par l’Utilisateur implique acceptation intégrale et sans réserve des présentes mentions légales.</p>
+                    <p>Ces dernières sont accessibles sur le Site à la rubrique « Mentions légales ».</p>
+                    
+                    <h2>ARTICLE 1 – L’ÉDITEUR</h2>
+                    <p>L’édition et la direction de la publication du Site est assurée par Bob&Tintin | DWWM@2024, dont l’adresse e-mail est : bob-tintin@gmail.com</p>
+                    <p>La personne est assujettie au Registre du Commerce et des Sociétés de Saint Omer sous le numéro XXXXXXXXX.</p>
+                    <p>ci-après l'«<strong>Editeur</strong>»</p>
+                    
+                    <h2>ARTICLE 2 – L’HÉBERGEUR</h2>
+                    <p>L’hébergeur du Site est la société OVH, dont le siège social est situé au 2 rue Kellermann – 59100 Roubaix. Téléphone : 0522260086</p>
+                    
+                    <h2>ARTICLE 3 – ACCÈS AU SITE</h2>
+                    <p>Le Site est accessible en tout endroit, 7j/7, 24h/24 sauf cas de force majeure, interruption programmée ou non et pouvant découlant d’une nécessité de maintenance.</p>
+                    <p>En cas de modification, interruption ou suspension du Site, l’Editeur ne saurait être tenu responsable.</p>
+                    
+                    <h2>ARTICLE 4 – COLLECTE DES DONNÉES</h2>
+                    <p>Le Site assure à l’Utilisateur une collecte et un traitement d’informations personnelles dans le respect de la vie privée conformément à la loi n°78-17 du 6 janvier 1978 relative à l’informatique, aux fichiers et aux libertés.</p>
+                    <p>En vertu de la loi Informatique et Libertés, en date du 6 janvier 1978, l’Utilisateur dispose d’un droit d’accès, de rectification, de suppression et d’opposition de ses données personnelles. L’Utilisateur exerce ce droit :</p>
+                    <ul>
+                        <li>par mail à l’adresse email contact@Les-Brunchs-de-Bob-et-Tintin.fr</li>
+                    </ul>
+                    <p>Toute utilisation, reproduction, diffusion, commercialisation, modification de toute ou partie du Site, sans autorisation de l’Editeur est prohibée et pourra entraîner des actions et poursuites judiciaires telles que notamment prévues par le Code de la propriété intellectuelle et le Code civil.</p>
+                </article>
+            </div>
+        </section>
+    </main>
 {% endblock %}
