--- a/templates/resetmdp/updatemdp.html.twig
+++ b/templates/resetmdp/updatemdp.html.twig
@@ -1,21 +1,17 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Mot de passe oublié!
-{% endblock %}
+{% block title %}Mot de passe oublié!{% endblock %}
 
 {% block body %}
-
-	<div id="concept" class="container-fluid p-3">
-		<div class="row text-center pt-5">
-			<h1>Reinitialisation du mot de passe</h1>
-
-		</div>
-		<div id="conceptExplain" class="col-md-6 mx-auto mb-4 p-5">
+    <main id="concept" class="container-fluid p-3">
+        <header class="row text-center pt-5">
+            <h1>Réinitialisation du mot de passe</h1>
+        </header>
+        <section id="conceptExplain" class="col-md-6 mx-auto mb-4 p-5">
             {% for message in app.flashes('notice') %}
-                 <div class="alert alert-info">{{message}}</div>
+                <div class="alert alert-info">{{ message }}</div>
             {% endfor %}
-		{{form(form)}}
-
-		</div>
-	</div>
+            {{ form(form) }}
+        </section>
+    </main>
 {% endblock %}
