--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -7,8 +7,11 @@ body {
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Itim', cursive;
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    font-style: normal;
 }
+
 /* mise en forme des bulles de page accueil */
 .info-bubble {
     display: none;
@@ -20,43 +23,44 @@ html {
 }
 
 a {
-    color: black;
+    color: rgb(0, 0, 0);
     text-decoration: none;
 }
 
 
 #navbar {
-    background-color: #E7D1D1;
+    background-color: #FF9130;
     top: 0;
 }
+@media (max-width: 992px) {
+    #logonav{
+        height: 100px;
+    }
+}
+#navbar a{
+color: white;}
 
 #footer {
-    background-color: #E7D1D1;
+    background-color: #A9A9A9;
     min-height: 70px;
     position: absolute;
     width: 100%;
 }
 
-#concept {
-    background-image: url(/assets/images/fond.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    margin-top: -1.5rem;
-
-}
 
 #conceptExplain {
-    background-color: #E7D1D1;
+    border-radius: 2%;
+    background-color: #FECDA6;
 }
 
 #concept li {
     margin-left: 1.5rem;
 }
 
-#NosBoxs,
 #NosParte {
-    background-color: #E7D1D1;
+    background-color: #FF5B22;
     margin-bottom: 6rem;
+    margin-top: 3rem;
     font-weight: bold;
     font-size: xx-large;
 }
@@ -65,11 +69,6 @@ a {
     font-family: 'Italianno', cursive;
     font-size: 150px;
 }
-
-#parte p {
-    margin: 0 5rem 0 5rem;
-}
-
 
 .rounded-custom {
     border-radius: 15px;
@@ -87,173 +86,12 @@ a {
 }
 
 
-
-.container1 {
-    position: relative;
-    width: 700px;
-    height: 520px;
-    background: #7e7e7e;
-    box-shadow: 0 30px 50px #dbdbdb;
-
-}
-
-.container1 .slide .item {
-    width: 165px;
-    height: 250px;
-    position: absolute;
-    top: 50%;
-    transform: translate(0, -50%);
-    border-radius: 20px;
-    box-shadow: 0 30px 50px #292828;
-    background-position: 50% 50%;
-    background-size: cover;
-    display: inline-block;
-    transition: 0.5s;
-
-}
-
-.slide .item:nth-child(1),
-.slide .item:nth-child(2) {
-    top: 0;
-    left: 0;
-    transform: translate(0, 0);
-    border-radius: 0;
-    width: 100%;
-    height: 100%;
-}
-
-.slide .item:nth-child(3) {
-    left: 50%;
-}
-
-.slide .item:nth-child(4) {
-    left: calc(50% + 210px);
-}
-
-.slide .item:nth-child(5) {
-    left: calc(50% + 430px);
-}
-
-.slide .item:nth-child(n + 6) {
-    left: calc(50% + 650px);
-    opacity: 0;
-}
-
-.item .content {
-    position: absolute;
-    top: 50%;
-    left: 100px;
-    width: 250px;
-    text-align: left; 
-    color: #000000;
-    transform: translate(0, -50%);
-    font-family: system-ui, sans-serif;
-    display: none;
-    padding-right: 60px;
-    font-weight: bold;
-
-
-}
-
-.slide .item:nth-child(2) .content {
-    display: block;
-}
-
-.content .name {
-    font-size: 40px;
-    text-transform: uppercase;
-    font-weight: bold;
-    opacity: 0;
-    color: #000;
-    animation: animate 1s ease-in-out 1 forwards;
-}
-
-.content .des {
-    margin-top: 10px;
-    margin-bottom: 20px;
-    opacity: 0;
-    animation: animate 1s ease-in-out 0.3s 1 forwards;
-    background: #fffdfde3;
-    padding: 0.8rem;
-    border-radius: 5%;
-
-}
-
-.content button {
-    padding: 10px 20px;
-    border: none;
-    cursor: pointer;
-    opacity: 0;
-    animation: animate 1s ease-in-out 0.6s 1 forwards;
-
-}
-
-@keyframes animate {
-    from {
-        opacity: 0;
-        transform: translate(0, 100px);
-        filter: blur(33px);
+@media only screen and (max-width: 700px) {
+    #concept h1 {
+      font-size: 90px; /* Taille réduite pour les écrans de téléphone */
     }
-
-    to {
-        opacity: 1;
-        transform: translate(0);
-        filter: blur(0);
-    }
-}
-
-.button {
-    width: 100%;
-    text-align: center;
-    position: absolute;
-    bottom: 20px;
-}
-
-.button button {
-    width: 40px;
-    height: 35px;
-    border-radius: 8px;
-    border: none;
-    cursor: pointer;
-    margin: 0 5px;
-    border: 1px solid #000;
-
-}
-
-.button button:hover {
-    background: #ababab;
-    color: #fff;
-
-}
-
-
-/* {# fin test css de carouselles de boxs #} */
-
-
-/* mediaquerry pour que le carouselle disparaise au profit des bulles de boxs sur petits ecrans */
-@media only screen and (min-width: 1200px) {
-    #fullDisplay {
-        display: block;
-        /* Afficher la div sur les grands écrans */
-    }
-
-    #phoneDisplay {
-        display: none;
-    }
-}
-
-@media only screen and (max-width: 1200px) {
-    #fullDisplay {
-        display: none;
-    }
-
-    #phoneDisplay {
-        display: block;
-        /* Afficher la div lorsque la largeur de l'écran est inférieure à 1200px */
-    }
-}
-
-#togglePassword{
+  }
+#mot-de-passe{
     border: none;
 }
 
@@ -287,5 +125,124 @@ a {
 }
 
 
+#navbarTogglerDemo01 li{
+    margin-left: 3rem;
+}
+#imglogout{
+    margin-right: 1rem;
+}
 
+#contenuplus {
+    display: block;
+}
+#voirplus{
+    display: none;
+}
 
+@media (max-width: 700px) {
+    #voirplus{
+        display: block;
+        text-decoration: none;
+        font-weight: bold;
+    }
+    #contenuplus.collapse {
+        display: none;
+    }
+
+    #contenuplus.expanded {
+        display: block;
+    }
+}
+/* CSS du bouton pour selectionner les boxs*/
+.button-74 {
+    background-color: #FECDA6;
+    border: 2px solid #FECDA6;
+    border-radius: 30px;
+    box-shadow: #422800 4px 4px 0 0;
+    color: #000000;
+    cursor: pointer;
+    display: inline-block;
+    font-weight: 600;
+    font-size: 18px;
+    padding: 0 18px;
+    line-height: 50px;
+    text-align: center;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+  }
+  
+  .button-74:hover {
+    background-color: #fff;
+  }
+  
+  .button-74:active {
+    box-shadow: #422800 2px 2px 0 0;
+    transform: translate(2px, 2px);
+  }
+  
+  @media (min-width: 768px) {
+    .button-74 {
+      min-width: 120px;
+      padding: 0 25px;
+    }
+  }
+  @media (max-width: 700px) {
+    .button-74 {
+      max-height: 60px;
+      font-size: 11px;
+      padding: 0 ;
+      line-height: 15px;
+  
+    }
+  }
+
+#btnaccesbox{
+    justify-content: center;
+}
+#cardboxs{
+    border: none;
+}
+#cardboxs img{
+height: 320px;
+}
+
+.cardtext p, li{
+    margin-left: 2rem;
+}
+#cardboxs a{
+margin-top: 2rem;
+margin-bottom: 5rem;
+}
+@media (max-width: 700px){
+    .cardtext{
+        display:none ;
+    }
+    h5{
+        font-size: smaller;
+    }
+    #cardboxs img{
+        height: 200px;
+        }
+}
+#cardparte img{
+    height: 250px;
+}
+@media (min-width: 700px){
+    #fullparte{
+        display:flex;
+    }
+    #oneparte{
+        display: none;
+    }
+}
+    @media (max-width: 700px){
+        #fullparte{
+            display:none;
+        }
+        #oneparte{
+            display: flex;
+            justify-content: center;
+        }
+    }
