--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -4,126 +4,111 @@
 {% endblock %}
 
 {% block body %}
-	<div id="concept" class="container-fluid p-3">
-		<div class="row text-center pt-5">
+	<section id="concept" class="container-fluid p-3">
+		<header class="row text-center pt-5">
 			<h1>Les Brunchs de Bob et Tintin</h1>
-		</div>
-	<div id="conceptExplain" class="col-md-8 mx-auto mb-4 p-5">
-			Se faire livrer un brunch à domicile offre une expérience conviviale et pratique, avec une multitude d'avantages. Tout d'abord, cela permet de savourer un délicieux repas sans avoir à se déplacer, ce qui est particulièrement apprécié le matin lorsque l'on souhaite éviter la foule ou quand on est pressé. Ensuite, la livraison de brunch offre une grande variété de choix, des classiques comme les œufs bénédictine et les pancakes aux options plus exotiques ou spécialisées, ce qui ravit les papilles de chacun, peu importe ses préférences alimentaires.
-			<br><br>
+		</header>
+		<article id="conceptExplain" class="col-md-8 mx-auto mb-4 p-5">
+			<p id="intro">Se faire livrer un brunch à domicile offre une expérience conviviale et pratique, avec une multitude d'avantages. Tout d'abord, cela permet de savourer un délicieux repas sans avoir à se déplacer, ce qui est particulièrement apprécié le matin lorsque l'on souhaite éviter la foule ou quand on est pressé.
+			</p>
+			<div id="contenuplus" class="collapse">
+				<p>Ensuite, la livraison de brunch offre une grande variété de choix, des classiques comme les œufs bénédictine et les pancakes aux options plus exotiques ou spécialisées, ce qui ravit les papilles de chacun, peu importe ses préférences alimentaires. De plus, cela permet de profiter de moments de détente en famille ou entre amis sans se soucier de la préparation et du nettoyage. C'est une occasion parfaite pour partager des conversations agréables tout en dégustant un repas de qualité. En outre, faire livrer un brunch à domicile est également une excellente option lorsqu'on organise des événements spéciaux tels que des anniversaires, des fêtes ou des réunions, car cela simplifie l'organisation tout en offrant une expérience gastronomique mémorable.</p>
+				<ul>
+					<li>Un grand choix de formules disponibles (à la française, à l'anglaise et même à l'américaine)</li>
+					<li>Un secteur de livraison bien desservi</li>
+					<li>Des produits locaux, frais, Made in France et de qualité premium</li>
+				</ul>
+				<p>Enfin, avec la montée en popularité des services de livraison, il est désormais possible de commander un brunch à tout moment de la journée, ce qui en fait une option flexible et accessible pour satisfaire les envies culinaires à tout moment. En résumé, se faire livrer un brunch à domicile combine commodité, choix variés, convivialité et plaisir gastronomique, ce qui en fait une option attrayante pour de nombreux amateurs de brunch.</p>
+			</div>
+			<a id="voirplus">Voir plus</a>
+		</article>
 
-			De plus, cela permet de profiter de moments de détente en famille ou entre amis sans se soucier de la préparation et du nettoyage. C'est une occasion parfaite pour partager des conversations agréables tout en dégustant un repas de qualité. En outre, faire livrer un brunch à domicile est également une excellente option lorsqu'on organise des événements spéciaux tels que des anniversaires, des fêtes ou des réunions, car cela simplifie l'organisation tout en offrant une expérience gastronomique mémorable.
-			<br>
+	</section>
 
-			<li>Un Grand choix de formules disponibles ( à la francaise, à l'anglaise et meme à l'americaine )</li> 
-			<li>Un secteur de livraison assez bien desservi</li>
-			<li>Des produits locaux, frais, Made in France et de qualité premium</li>
-			<br>
+	<section id="NosBoxs" class="text-center col-md-2 mx-auto p-3 rounded">
+		<header>
+			<h2></h2>
+		</header>
+	</section>
 
-			Enfin, avec la montée en popularité des services de livraison, il est désormais possible de commander un brunch à tout moment de la journée, ce qui en fait une option flexible et accessible pour satisfaire les envies culinaires à tout moment. En résumé, se faire livrer un brunch à domicile combine commodité, choix variés, convivialité et plaisir gastronomique, ce qui en fait une option attrayante pour de nombreux amateurs de brunch
-		</div>
-	</div>
-	<br>
-	<hr>
-	<br>
-	<div id='NosBoxs' class="text-center col-md-2 mx-auto p-3 rounded">
-		Nos Box's
-	</div>
-
-	<div class="container-fluid">
-		<div id="fullDisplay" class="col-md-10 mx-auto">
-			<div class="container1 text-center mx-auto">
-				<div class="slide">
-					{% for Box in boxs %}
-						<div class="item" style="background-image: url(assets/images/{{Box.illustration}});">
-							<div class="content">
-								<div class="name">{{Box.nom}}</div>
-								<div class="des">{{Box.description}}</div>
-								<a href="{{ path('app_ma_box', {'slug' : Box.slug})}}" class="btn btn-primary mb-3">Personnaliser cette Box</a>
-							</div>
+	<section class="container-fluid">
+		<div class="card mb-3 mx-5" style="max-width:100;" id='cardboxs'>
+			<div class="d-flex">
+				{% for Box in boxAleatoires %}
+					<img src="/assets/images/{{ Box.illustration }}" class="img-fluid rounded-start" alt="Illustration de {{ Box.nom }}">
+					<div class="col-md-10">
+						<div class="card-body">
+							<h5 class="card-title text-center">Venez découvrir nos box gourmandes !</h5>
+							<div class="cardtext">
+								<p>
+									<strong>{{ Box.nom }}</strong>
+								</p>
+							{% endfor %}
+							<p class="card-text">Que vous soyez un amateur de sucré ou de salé, nous avons la box parfaite pour vous ! Nos box sont conçues pour satisfaire toutes les envies et tous les goûts, des plus petits aux plus grands.</p>
+							<br>
+							<li>Pour les gourmands de sucré : Plongez dans un monde de douceurs avec nos box remplies de friandises, chocolats, et autres délices sucrés qui raviront vos papilles.</li>
+							<br>
+							<li>Pour les amateurs de salé : Découvrez nos box savoureuses contenant une sélection exquise de snacks salés, fromages, charcuteries et bien plus encore.
+							</li>
+							<br>
+							<p>N'attendez plus, venez explorer notre gamme variée et trouvez la box qui vous fera fondre de plaisir !</p>
 						</div>
-					{% endfor %}
-				</div>
-				<div class="button">
-					<button class="prev">
-						<- </button> <button class="next"> -></button>
+						<div class="d-flex justify-content-center mt-3">
+							<a href="{{path('app_boxs')}}" class='button-74'>Accéder à nos box's</a>
+						</div>
 					</div>
 				</div>
 			</div>
+		</div>
+	</section>
+	<section id="NosParte" class="text-center col-md-2 mx-auto p-3 rounded">
+		<header>
+			<h2>Nos Partenaires</h2>
+		</header>
+	</section>
 
-			<div id="phoneDisplay" class="col-md-12">
-				<div class="row justify-content-center">
-					{% for Box in boxAleatoires %}
-						<div class="col-md-3 col-xs-12">
-							<img class='img-fluid mb-4 rounded-circle' src="assets/images/{{Box.illustration}}" alt="illustration" width="100px"><br>
-							<h4>{{Box.nom}}</h4>
-							<p>{{Box.description}}</p>
-							<a href="{{ path('app_ma_box', {'slug' : Box.slug})}}" class="btn btn-primary mb-3">Personnaliser cette Box</a>
+	<section class="container-fluid">
+			<div class="row justify-content-center text-center" id='fullparte'>
+				{% for Partenaire in partenairesAleatoires %}
+					<div class="card mx-5 mb-5" style="width: 24rem;" id="cardparte">
+						<img src="/assets/images/{{ Partenaire.illustration }}" class="card-img-top " alt="Logo de {{ Partenaire.entreprise }}">
+						<div class="card-body">
+							<h5 class="card-title">{{ Partenaire.entreprise }}</h5>
+							<p class="card-text">{{ Partenaire.description }}</p>
+							<a href="{{ path('app_partenaires') }}" class="button-74">En savoir plus</a>
 						</div>
-					{% endfor %}
-				</div>
+					</div>
+				{% endfor %}
 			</div>
-		</div>
-
-		<p class="text-end p-4">
-			<a href="">voir plus -></a>
-		</p>
-
-		<br>
-		<hr>
-		<br>
-
-		<div id='NosParte' class="text-center col-md-2 mx-auto p-3 rounded">
-			Nos Partenaires
-		</div>
-
-		<div class="container-fluid">
-			<div id='parte' class="col-md-12">
-				<div class="row justify-content-center text-center">
-					{% for Partenaire in partenairesAleatoires %}
-						<div class="col-md-3 col-xs-12">
-							<a href="{{ path('app_partenaires') }}">
-								<img class='img-fluid mb-4 rounded-circle' src="assets/images/{{Partenaire.illustration}}" alt="Logo" heigth="100px" width="100px"><br>
-								<h4>{{Partenaire.entreprise}}</h4>
-								<p>{{Partenaire.description}}</p>
-							</a>
+            <div class="row justify-content-center text-center" id='oneparte'>
+				{% for Partenaire in partenaireAleatoire %}
+					<div class="card mx-2 mb-2" style="width: 18rem;" id="cardparte">
+						<img src="/assets/images/{{ Partenaire.illustration }}" class="card-img-top " alt="Logo de {{ Partenaire.entreprise }}">
+						<div class="card-body">
+							<h5 class="card-title">{{ Partenaire.entreprise }}</h5>
+							<p class="card-text">{{ Partenaire.description }}</p>
+							<a href="{{ path('app_partenaires') }}" class="button-74">Découvrez-les</a>
 						</div>
-					{% endfor %}
-				</div>
+					</div>
+				{% endfor %}
 			</div>
-		</div>
+	</section>
+	<script>
+		document.addEventListener("DOMContentLoaded", function () {
+let voirplus = document.getElementById("voirplus");
+let contenuplus = document.getElementById("contenuplus");
 
-		<p class="text-end p-4">
-			<a href="">voir plus -></a>
-		</p>
-
-		<script>
-			const $next = document.querySelector('.next');
-const $prev = document.querySelector('.prev');
-
-$next.addEventListener('click', () => {
-const items = document.querySelectorAll('.item');
-document.querySelector('.slide').appendChild(items[0]);
-},);
-
-
-$prev.addEventListener('click', () => {
-const items = document.querySelectorAll('.item');
-document.querySelector('.slide').prepend(items[items.length - 1]);
-},);
-
-document.addEventListener("DOMContentLoaded", function () {
-var bubbles = document.querySelectorAll('#info-bubbles-container .info-bubble');
-var currentIndex = 0;
-
-function showNextBubble() {
-bubbles[currentIndex].style.display = 'none';
-currentIndex = (currentIndex + 1) % bubbles.length;
-bubbles[currentIndex].style.display = 'block';
+voirplus.addEventListener("click", function () {
+if (contenuplus.classList.contains("collapse")) {
+contenuplus.classList.remove("collapse");
+contenuplus.classList.add("expanded");
+voirplus.textContent = "Voir moins";
+} else {
+contenuplus.classList.remove("expanded");
+contenuplus.classList.add("collapse");
+voirplus.textContent = "Voir plus";
 }
-
-setInterval(showNextBubble, 2000); // Change la bulle toutes les 3 secondes
 });
-		</script>
-
-	{% endblock %}
+});
+	</script>
+{% endblock %}
