--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -1,50 +1,55 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Nous contacter
-{% endblock %}
+{% block title %}Nous contacter{% endblock %}
 
 {% block body %}
 
-	<div id="concept" class="container-fluid p-3">
-		<div class="row text-center pt-5">
+<main id="concept" class="container-fluid p-3">
+    <header class="row text-center pt-5">
+        <h1>Nous Contacter</h1>
+        <p>N'hésitez pas à prendre contact avec notre équipe, nous vous répondrons dans les plus brefs délais.</p>
+    </header>
+    <section id="conceptExplain" class="col-md-6 mx-auto mb-4 p-5">
+        {% if notification %}
+            <div class="alert alert-info">{{ notification }}</div>
+        {% endif %}
 
-			<h1>Nous Contacter</h1>
-			<p>N'hesitez pas à prendre cotact avec nos equipe, nous vous répondrons dans les plus brefs delais</p>
-		</div>
-		<div id="conceptExplain" class="col-md-6 mx-auto mb-4 p-5">
-
-			{% if notification %}
-                <div class="alert alert-info">{{notification}}</div>
-            {% endif %}
-
-
-			<div class="row">
-				<div class="">
-					{{ form_start(form) }}
-
-			<div class="row">
-				<div class="col-md-6">
-					{{ form_row(form.nom) }}
-				</div>
-				<div class="col-md-6">
-					{{ form_row(form.prenom) }}
-				</div>
-			</div>
-
-			{{ form_row(form.email) }}
-            {{ form_row(form.objet) }}
-            {{ form_row(form.message) }}
-			
-
-
-			<div class="col-md-6 ">
-				{{ form_row(form.submit) }}
-			</div>
+        <form action="#" method="post">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="form-group">
+                        {{ form_label(form.nom) }}
+                        {{ form_widget(form.nom, {'attr': {'class': 'form-control'}}) }}
+                    </div>
                 </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        {{ form_label(form.prenom) }}
+                        {{ form_widget(form.prenom, {'attr': {'class': 'form-control'}}) }}
+                    </div>
+                </div>
+            </div>
 
-				
-			</div>
-		</div>
-	</div>
+            <div class="form-group">
+                {{ form_label(form.email) }}
+                {{ form_widget(form.email, {'attr': {'class': 'form-control'}}) }}
+            </div>
+
+            <div class="form-group">
+                {{ form_label(form.objet) }}
+                {{ form_widget(form.objet, {'attr': {'class': 'form-control'}}) }}
+            </div>
+
+            <div class="form-group">
+                {{ form_label(form.message) }}
+                {{ form_widget(form.message, {'attr': {'class': 'form-control'}}) }}
+            </div>
+
+            <div class="col-md-6">
+                {{ form_row(form.submit) }}
+            </div>
+        </form>
+    </section>
+</main>
 
 {% endblock %}
