--- a/templates/nos_boxs/afficher.html.twig
+++ b/templates/nos_boxs/afficher.html.twig
@@ -1,60 +1,57 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Afficher mon produit!
-{% endblock %}
+{% block title %}Afficher mon produit!{% endblock %}
 
 {% block body %}
-	<div id="concept" class="container-fluid p-3 text-center">
-		<div class="row text-center pt-5">
-			<h1>{{ Box.nom }}</h1>
-		</div>
-		<div class="rounded-custom bg-light bg-opacity-75 col-md-10 row mx-auto p-4 m-4">
-			<div class="col-md-5 mx-auto">
-				<img class='img-fluid m-4' src="/assets/images/{{ Box.illustration }}" alt="Photo de {{ Box.nom }}" width="200px">
-				<br>
-				<p>{{ Box.description }}</p>
-			</div>
+    <main id="concept" class="container-fluid p-3 text-center">
+        <header class="row text-center pt-5">
+            <h1>{{ Box.nom }}</h1>
+        </header>
+        <section class="rounded-custom bg-light bg-opacity-75 col-md-10 row mx-auto p-4 m-4">
+            <div class="col-md-5 mx-auto">
+                <img class='img-fluid m-4' src="/assets/images/{{ Box.illustration }}" alt="Photo de {{ Box.nom }}" width="200px">
+                <br>
+                <p>{{ Box.description }}</p>
+            </div>
 
-			<div class="col-md-5  mx-auto">
-				<h3 class="mt-3">Cette Box est d'office composée de :</h3>
-				<div id="quantitee" class="col-md-8 mx-auto text-start ">
-					<div class="row">
-						{% for ingredient in ingredients %}
-							<div class="col-md-6 mb-3 ">
-								{{ ingredient.ingredient }}
-							</div>
-							{% if loop.index % 2 == 0 %}
-							</div>
-							<div class="row">
-							{% endif %}
-						{% endfor %}
-					</div>
-				</div>
-				<br>
-				{# <a href="{{ path("app_add_to_cart", {'idbox': Box.id}) }}" class="btn btn-success">Ajouter cette formule au panier</a> #}
-			</div>
-		</div>
+            <div class="col-md-5 mx-auto">
+                <h3 class="mt-3">Cette Box est d'office composée de :</h3>
+                <div id="quantitee" class="col-md-8 mx-auto text-start">
+                    <div class="row">
+                        {% for ingredient in ingredients %}
+                            <div class="col-md-6 mb-3">
+                                {{ ingredient.ingredient }}
+                            </div>
+                            {% if loop.index % 2 == 0 %}
+                            </div>
+                            <div class="row">
+                            {% endif %}
+                        {% endfor %}
+                    </div>
+                </div>
+                <br>
+            </div>
+        </section>
 
-		<div class="rounded-custom bg-light bg-opacity-75 col-md-10 row mx-auto p-4 m-4">
-			<div class="col-md-10  mx-auto">
-				<h4 class="mt-3">Ajoutez GRATUITEMENT 4 ingredients pour personaliser
-					{{ Box.nom }}</h4>
+        <section class="rounded-custom bg-light bg-opacity-75 col-md-10 row mx-auto p-4 m-4">
+            <div class="col-md-10 mx-auto">
+                <h4 class="mt-3">Ajoutez GRATUITEMENT 4 ingrédients pour personnaliser {{ Box.nom }}</h4>
 
-				{{ form_start(form) }}
-				<div class="row">
-					<div class="col-md-6">
-						{{ form_row(form.ingredient1) }}
-						{{ form_row(form.ingredient2) }}
-						<!-- Ajoutez les autres champs de la première colonne ici -->
-					</div>
-					<div class="col-md-6">
-						{{ form_row(form.ingredient3) }}
-						{{ form_row(form.ingredient4) }}
-						<!-- Ajoutez les autres champs de la deuxième colonne ici -->
-					</div>
-				</div>
-				{{ form_end(form) }}
-			</div>
-		</div>
-	</div>
+                {{ form_start(form) }}
+                <div class="row">
+                    <div class="col-md-6">
+                        {{ form_row(form.ingredient1) }}
+                        {{ form_row(form.ingredient2) }}
+                        <!-- Ajoutez les autres champs de la première colonne ici -->
+                    </div>
+                    <div class="col-md-6">
+                        {{ form_row(form.ingredient3) }}
+                        {{ form_row(form.ingredient4) }}
+                        <!-- Ajoutez les autres champs de la deuxième colonne ici -->
+                    </div>
+                </div>
+                {{ form_end(form) }}
+            </div>
+        </section>
+    </main>
 {% endblock %}
